# sicplings-seq

./: .gitignore  Cargo.toml  README.md
exercises/: info.toml
exercises/01-elements/: 01-square.seq  02-sum-of-squares.seq  03-abs.seq  04-sqrt.seq  README.md
exercises/02-procedures/: 01-factorial-recursive.seq  02-factorial-iterative.seq  03-fibonacci-recursive.seq  04-fibonacci-iterative.seq  05-gcd.seq  06-expt.seq  README.md
hints/01-elements/: 01-square.md  02-sum-of-squares.md  03-abs.md  04-sqrt.md
hints/02-procedures/: 01-factorial-recursive.md  02-factorial-iterative.md  03-fibonacci-recursive.md  04-fibonacci-iterative.md  05-gcd.md  06-expt.md
solutions/01-elements/: 01-square.seq  02-sum-of-squares.seq  03-abs.seq  04-sqrt.seq
solutions/02-procedures/: 01-factorial-recursive.seq  02-factorial-iterative.seq  03-fibonacci-recursive.seq  04-fibonacci-iterative.seq  05-gcd.seq  06-expt.seq
src/: exercise.rs  main.rs  runner.rs
