[package]
name = "sicplings-seq"
version = "0.1.0"
edition = "2021"
description = "SICP exercises reimagined in Seq - a stack-based journey through computation"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
